<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/bottom_home">

    <fragment
        android:id="@+id/bottom_home"
        android:name="com.example.roomdb.Fragments.HomeFragment"
        android:label="@string/bottom_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/bottom_page1"
        android:name="com.example.roomdb.Fragments.Page1Fragment"
        android:label="@string/bottom_page1"
        tools:layout="@layout/fragment_page1" />
    <fragment
        android:id="@+id/bottom_page2"
        android:name="com.example.roomdb.Fragments.Page2Fragment"
        android:label="@string/bottom_page2"
        tools:layout="@layout/fragment_page2"/>
</navigation>